[tool.poetry]
name = "tep"
version = "0.9.2"
description = "tep is a testing tool to help you write pytest more easily. Try Easy Pytest!"
license = "Apache-2.0"
readme = "README.md"
authors = ["dongfanger <dongfanger@outlook.com>"]

homepage = "https://github.com/dongfanger/tep"
repository = "https://github.com/dongfanger/tep"

keywords = ["testing", "pytest"]

classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.6.2"
faker = "^4.1.1"
urllib3 = "^1.25.9"
requests = "^2.22.0"
allure-pytest = "^2.8.16"
allure-python-commons = "^2.8.16"
pyyaml = "^5.4.1"
pytest = "^5.4.2"
pytest-assume = "^2.4.2"
jmespath = "^0.9.5"
loguru = "^0.4.1"
httprunner = "^3.1.6"
flask = "1.1.4"


[tool.poetry.dev-dependencies]
wget = "^3.2"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.scripts]
tep = "tep.cli:main"

[tool.poetry.plugins."pytest11"]
"tep" = "tep.plugin:Plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"