[tool.poetry]
name = "tep"
version = "2.2.0"
description = "tep is a testing framework to help you write pytest more easily. Try Easy Pytest!"
license = "Apache-2.0"
readme = "README.md"
authors = ["dongfanger <dongfanger@outlook.com>"]

homepage = "https://github.com/dongfanger/tep"
repository = "https://github.com/dongfanger/tep"

keywords = ["testing", "keyword driven", "framework", "pytest"]

classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^4.1.1"
urllib3 = "^2.0.7"
requests = "^2.22.0"
pytest-assume = "^2.4.2"
loguru = "^0.4.1"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
pytest = "^7.1.1"
pytest-xdist = "^3.1.0"
filelock = "^3.8.2"
jsonpath = "^0.82"
pymysql = "^1.1.0"
pytest-html = "^4.0.2"
allure-pytest = "^2.13.2"
allure-python-commons = "^2.13.2"
httpx = "^0.25.1"
haralyzer = "^2.4.0"
deepdiff = "^6.7.1"
tenacity = "^8.2.3"
pyyaml = "^6.0.1"


[tool.poetry.dev-dependencies]
wget = "^3.2"

[[tool.poetry.source]]
name = "tsinghua"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.scripts]
tep = "tep.cli:main"

[tool.poetry.plugins."pytest11"]
"tep" = "tep.plugin:Plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"